--- a/index.html
+++ b/index.html
@@ -2,7 +2,20 @@
 <html lang="en">
 
 <head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <title>Ristorante Con Fusion</title>
+</head>
+<body>
+    
+</body>
+</html>    <title>Ristorante Con Fusion</title>
 </head>
 
 <body>
@@ -95,7 +108,9 @@
            </div>
         </div>
     </footer>
-
+  <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+  <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
